[package]
name = "egui_winit_wgpu_integrator"
version = "0.1.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
http=["epi_http/native"]

[dependencies]
egui_wgpu_backend = {git="https://github.com/hasenbanck/egui_wgpu_backend.git",branch="master"}
egui_winit_platform = {git="https://github.com/hasenbanck/egui_winit_platform.git",branch="master"}
winit ="0.24.0"
futures-lite = "1.11"
epi_http={git="https://github.com/t18b219k/epi_http.git",branch="master",optional=true}
chrono = "0.4"
wgpu-subscriber = "*"