[package]
name = "egui_winit_wgpu_integrator"
version = "0.1.0"
authors = ["t18b219k <t18b219k@mail.cc.niigata-u.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
http=["egui_demo_lib/syntect","egui_demo_lib/http","epi_http"]

[dependencies]
egui_wgpu_backend = "0.5.0"
egui_winit_platform={version="0.5.0",features=["webbrowser","clipboard"]}
futures-lite = "1.11"
chrono = "0.4"
epi_http={git="https://github.com/t18b219k/epi_http.git",branch="master",optional=true}
winit="0.24"

[dev-dependencies]
egui_demo_lib = "0.10.0"
